--- a/templates/home.html
+++ b/templates/home.html
@@ -358,7 +358,7 @@
 
         @media (max-width: 1023px) {
             .project-card-visual {
-                height: 6rem;
+                height: 5rem;
                 padding: 1rem 1.5rem;
             }
 
@@ -388,13 +388,13 @@
                 right: 1.5rem;
                 left: auto; 
                 transform: none;
-                width: 2.5rem;
-                height: 2.5rem;
+                width: 1.5rem;
+                height: 1.5rem;
             }
 
             /* Hide the glow on mobile */
             .project-icon-glow {
-               display: none;
+               /* display: none; */
             }
         }
     </style>
