--- a/templates/home.html
+++ b/templates/home.html
@@ -1175,6 +1175,7 @@
                 </div>
             </div>
 
+            <!-- Mobile View -->
             <div class="mt-12 lg:hidden timeline-container">
                 <template x-for="(industry, key) in industries" :key="key">
                     <div class="timeline-item" :class="{ 'timeline-item-active': selectedIndustry === key }">
@@ -1215,7 +1216,7 @@
                                 </template>
                             </div>
                             <div class="p-4 glass-effect">
-                                <p class="text-gray-300 text-sm mb-4" x-text="industry.description"></p>
+                                <p class="text-gray-300 text-xs mb-4" x-text="industry.description"></p>
                                 <div class="border-t border-white/10 pt-4">
                                     <h4 class="text-sm font-semibold text-gray-400 tracking-wider uppercase">Key Focus</h4>
                                     <ul class="mt-3 space-y-2">
@@ -1227,7 +1228,7 @@
                                         </template>
                                     </ul>
                                 </div>
-                                <button @click="openInquiryModal(key)" class="btn-futuristic text-white font-semibold px-5 py-2 text-sm mt-5">
+                                <button @click="openInquiryModal(key)" class="btn-futuristic text-white font-semibold px-5 py-2 text-sm mt-8">
                                     Inquire About This Sector
                                 </button>
                             </div>
