--- a/templates/home.html
+++ b/templates/home.html
@@ -1245,7 +1245,7 @@
                 <div class="lg:col-span-3">
                     <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold text-white uppercase mb-4 heading-leading">
                         Your Strategic Partner for Growth in Africa</h2>
-                    <p class="text-gray-300 text-lg">TIGMO is a hybrid business development firm that specializes in
+                    <p class="text-gray-300 text-sm sm:text-lg">TIGMO is a hybrid business development firm that specializes in
                         bringing nano-tech, biotech, AI, cosmetics, and pharmaceutical products to the African
                         market.</p>
                     <div class="h-px bg-gradient-to-r from-transparent via-teal-500/50 to-transparent my-6"></div>
@@ -1255,7 +1255,7 @@
                         delivering excellence.</p>
                 </div>
                 <!-- Updated Recent Focus Areas -->
-                <div class="lg:col-span-2 glass-effect p-8 rounded-2xl border border-white/10"
+                <div class="lg:col-span-2 glass-effect p-8 px-5 sm:p-8 rounded-2xl border border-white/10"
                      x-data="{ items: ['AI & Fintech', 'Nano & Bio Tech', 'Energy & Oil/Gas', 'Pharma & Cosmetics', 'Aesthetics & Medicine', 'Investments', 'Manufacturing', 'EPC & Training'], currentItem: 0, init() { setInterval(() => { this.currentItem = (this.currentItem + 1) % this.items.length }, 2500); } }">
                     <h3 class="text-lg sm:text-xl font-bold text-white uppercase tracking-wider whitespace-nowrap">Recent Focus
                         Areas</h3>
