--- a/templates/home.html
+++ b/templates/home.html
@@ -1174,7 +1174,8 @@
                     </div>
                 </div>
             </div>
-            
+
+            <!-- Mobile View -->
             <div class="mt-12 lg:hidden timeline-container">
                 <template x-for="(industry, key) in industries" :key="key">
                     <div class="timeline-item" :class="{ 'timeline-item-active': selectedIndustry === key }">
@@ -1227,9 +1228,11 @@
                                         </template>
                                     </ul>
                                 </div>
-                                <button @click="openInquiryModal(key)" class="btn-futuristic text-white font-semibold px-5 py-2 text-sm mt-5">
-                                    Inquire About This Sector
-                                </button>
+                                <div class="mt-auto pt-4 border-t border-white/10">
+                                    <button @click="openInquiryModal(key)" class="btn-futuristic text-white font-semibold px-5 py-2 text-sm">
+                                        Inquire About This Sector
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
