--- a/templates/home.html
+++ b/templates/home.html
@@ -1221,7 +1221,7 @@
                             </div>
                             <div class="p-4 glass-effect">
                                 <p class="text-gray-300 text-[13px] text-justify hyphens-auto mb-4" x-text="industry.description"></p>
-                                <div class="border-t border-white/10 pt-4">
+                                <div class="border-t border-white/10 py-4">
                                     <h4 class="text-sm font-semibold text-gray-400 tracking-wider uppercase">Key Focus</h4>
                                     <ul class="mt-3 space-y-2">
                                         <template x-for="highlight in industry.highlights" :key="highlight">
@@ -1232,7 +1232,7 @@
                                         </template>
                                     </ul>
                                 </div>
-                                <div class="mt-5  pt-4 border-t border-white/10">
+                                <div class="mt-auto pt-4 border-t border-white/10">
                                     <button @click="openInquiryModal(key)" class="btn-futuristic text-white font-semibold px-5 py-2 text-sm">
                                         Inquire About This Sector
                                     </button>
