--- a/templates/home.html
+++ b/templates/home.html
@@ -1222,12 +1222,12 @@
                             <div class="p-4 glass-effect">
                                 <p class="text-gray-300 text-[13px] text-justify hyphens-auto mb-4" x-text="industry.description"></p>
                                 <div class="border-t border-white/10 py-4">
-                                    <h4 class="text-sm font-semibold text-gray-400 tracking-wider uppercase">Key Focus</h4>
+                                    <h4 class="text-[15px] font-semibold text-gray-400 tracking-wider uppercase">Key Focus</h4>
                                     <ul class="mt-3 space-y-2">
                                         <template x-for="highlight in industry.highlights" :key="highlight">
                                             <li class="flex items-start">
                                                 <svg class="h-5 w-5 flex-shrink-0 text-teal-400 mr-2 mt-0.5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" /></svg>
-                                                <span class="text-gray-400 text-[13px]" x-text="highlight"></span>
+                                                <span class="text-gray-400 text-sm" x-text="highlight"></span>
                                             </li>
                                         </template>
                                     </ul>
