--- a/templates/home.html
+++ b/templates/home.html
@@ -1059,7 +1059,7 @@
                     </div>
                     <div class="p-6 sm:p-8 flex-grow flex flex-col">
                         <span class="text-sm font-semibold text-teal-400 uppercase">Fuel Efficiency / Oil & Gas</span>
-                        <h3 class="mt-2 text-2xl font-bold text-white uppercase">NanoEfx: Revolutionizing Fuel Efficiency in Africa
+                        <h3 class="mt-2 text-2xl font-bold text-white uppercase">NanoEfx: Revolutionizing Fuel Efficiency in Africa</h3>
                         <p class="mt-4 text-gray-400 text-sm flex-grow text-justify hyphens-auto">
                            As the exclusive Go-To-Market partner for NanoEfx in Africa, we are deploying patented catalytic fuel treatment to high-impact sectors. Our initial focus on Nigeria's Oil & Gas, telecoms, and government fleets addresses critical economic and environmental challenges by reducing fuel consumption, lowering emissions, and extending engine life.
                         </p>
